--- a/MovieBooking/Services/Discount/Discount.API/Discount.API.csproj
+++ b/MovieBooking/Services/Discount/Discount.API/Discount.API.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Discount.Common\Discount.Common\Discount.Common.csproj" />
+    <ProjectReference Include="..\Discount.Common\Discount.Common.csproj" />
   </ItemGroup>
 
 </Project>
