--- a/MovieBooking/Services/Discount/Discount.API/appsettings.Development.json
+++ b/MovieBooking/Services/Discount/Discount.API/appsettings.Development.json
@@ -7,3 +7,6 @@
     }
   }
 }
+"DatabaseSettings": {
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+  }
