--- a/MovieBooking/Services/Discount/Discount.GRPC/Discount.GRPC.csproj
+++ b/MovieBooking/Services/Discount/Discount.GRPC/Discount.GRPC.csproj
@@ -2,7 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Protos\coupon.proto" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.20.1" />
@@ -12,15 +19,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Discount.Common\Discount.Common\Discount.Common.csproj" />
+    <ProjectReference Include="..\Discount.Common\Discount.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Protos\" />
-    <Folder Include="Services\" />
+    <Protobuf Include="Protos\coupon.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
