--- a/MovieBooking/Services/Discount/Discount.GRPC/appsettings.Development.json
+++ b/MovieBooking/Services/Discount/Discount.GRPC/appsettings.Development.json
@@ -8,3 +8,6 @@
     }
   }
 }
+"DatabaseSettings": {
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+  }
