--- a/MovieBooking/Services/Discount/Discount.API/appsettings.Development.json
+++ b/MovieBooking/Services/Discount/Discount.API/appsettings.Development.json
@@ -1,12 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "System": "Information",
+      "Grpc": "Information",
+      "Microsoft": "Information"
     }
-  }
-}
-"DatabaseSettings": {
+  },
+  "DatabaseSettings": {
     "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
   }
+}
