--- a/MovieBooking/Services/Discount/Discount.API/Dockerfile
+++ b/MovieBooking/Services/Discount/Discount.API/Dockerfile
@@ -7,11 +7,11 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["Services/Discount/Discount.API/Discount.API/Discount.API/Discount.API.csproj", "Services/Discount/Discount.API/Discount.API/Discount.API/"]
-COPY ["Services/Discount/Discount.Common/Discount.Common/Discount.Common.csproj", "Services/Discount/Discount.Common/Discount.Common/"]
-RUN dotnet restore "Services/Discount/Discount.API/Discount.API/Discount.API/Discount.API.csproj"
+COPY ["Services/Discount/Discount.API/Discount.API.csproj", "Services/Discount/Discount.API/"]
+COPY ["Services/Discount/Discount.Common/Discount.Common.csproj", "Services/Discount/Discount.Common/"]
+RUN dotnet restore "Services/Discount/Discount.API/Discount.API.csproj"
 COPY . .
-WORKDIR "/src/Services/Discount/Discount.API/Discount.API/Discount.API"
+WORKDIR "/src/Services/Discount/Discount.API/"
 RUN dotnet build "Discount.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
