feat Added support for MySql

--- a/MovieBooking/docker-compose.override.yml
+++ b/MovieBooking/docker-compose.override.yml
@@ -81,3 +81,18 @@ services:
         - discountdb
     ports:
       - "80:8003"
+
+  identitydb:
+    container_name: identitydb
+    restart: always
+    environment:
+      - MYSQL_DATABASE=IdentityDb
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    ports:
+      - '3306:3306'
+    expose:
+      - '3306'
+    volumes:
+      - identity_data:/var/lib/mysql
