--- a/MovieBooking/Services/Movie/Movie.API/Movies.API.csproj
+++ b/MovieBooking/Services/Movie/Movie.API/Movies.API.csproj
@@ -8,6 +8,7 @@
     <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Movie.API' " />
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
