--- a/MovieBooking/Services/Projection/Projections.Common/Projections.Common.csproj
+++ b/MovieBooking/Services/Projection/Projections.Common/Projections.Common.csproj
@@ -10,14 +10,18 @@
     <None Remove="Microsoft.Extensions.Configuration" />
     <None Remove="Data\" />
     <None Remove="Microsoft.Extensions.Configuration.Binder" />
+    <None Remove="Repositories\" />
+    <None Remove="Microsoft.Extensions.Logging" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Data\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 </Project>
