refactor Environment variables removed from Identity

--- a/MovieBooking/Services/Security/Identity/appsettings.Development.json
+++ b/MovieBooking/Services/Security/Identity/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityServerName": "localhost"
+    "IdentityConnectionString": "server=localhost;user=user;password=1234;database=IdentityDb"
   }
 }
