feat Implemented service for generating tokens

--- a/MovieBooking/Services/Security/Identity/appsettings.Development.json
+++ b/MovieBooking/Services/Security/Identity/appsettings.Development.json
@@ -8,5 +8,11 @@
   },
   "ConnectionStrings": {
     "IdentityConnectionString": "server=localhost;user=user;password=1234;database=IdentityDb"
+  },
+  "JwtSettings": {
+    "validIssuer": "MovieBooking Identity",
+    "validAudience": "MovieBooking",
+    "secretKey": "secretKey",
+    "expires": 15
   }
 }
