feat Configuring JWT

--- a/MovieBooking/Services/Security/Identity/appsettings.Development.json
+++ b/MovieBooking/Services/Security/Identity/appsettings.Development.json
@@ -12,7 +12,7 @@
   "JwtSettings": {
     "validIssuer": "MovieBooking Identity",
     "validAudience": "MovieBooking",
-    "secretKey": "secretKey",
+    "secretKey": "MyVerySecretMessage",
     "expires": 15
   }
 }
