Closes #38, closes #43; Added Projections.GRPC and docker support for Projections

--- a/MovieBooking/Services/Projection/Projections.Common/Projections.Common.csproj
+++ b/MovieBooking/Services/Projection/Projections.Common/Projections.Common.csproj
@@ -14,6 +14,8 @@
     <None Remove="Microsoft.Extensions.Logging" />
     <None Remove="Extensions\" />
     <None Remove="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
+    <None Remove="Dapper" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.15.1" />
@@ -21,6 +23,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
