--- a/MovieBooking/Services/Security/Identity/appsettings.Development.json
+++ b/MovieBooking/Services/Security/Identity/appsettings.Development.json
@@ -14,5 +14,6 @@
     "validAudience": "MovieBooking",
     "secretKey": "MyVerySecretMessage",
     "expires": 15
-  }
+  },
+  "RefreshTokenExpires": 30
 }
