feat Added docker support for identity service

--- a/MovieBooking/docker-compose.override.yml
+++ b/MovieBooking/docker-compose.override.yml
@@ -96,3 +96,14 @@ services:
       - '3306'
     volumes:
       - identity_data:/var/lib/mysql
+ 
+  identity:
+    container_name: identity
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings:IdentityConnectionString=server=identitydb;user=user;password=1234;database=IdentityDb;
+    depends_on:
+      - identitydb
+    ports:
+      - "4000:80"
+
