Closes #44; Added client side of grpc in Reservations.API and modified Projections

--- a/MovieBooking/Services/Reservations/Reservations.API/Reservations.API.csproj
+++ b/MovieBooking/Services/Reservations/Reservations.API/Reservations.API.csproj
@@ -15,13 +15,17 @@
     <None Remove="Grpc.AspNetCore" />
     <None Remove="GrpcServices\" />
     <None Remove="Google.Protobuf" />
+    <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
+    <None Remove="Dapper" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.5" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.45.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.46.0" />
     <PackageReference Include="Google.Protobuf" Version="3.20.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Dapper" Version="2.0.123" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -32,6 +36,9 @@
     <Protobuf Include="..\..\Discount\Discount.GRPC\Protos\coupon.proto" GrpcServices="Client">
       <Link>Protos\coupon.proto</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Protobuf>
+    <Protobuf Include="..\..\Projection\Projections.GRPC\Protos\projection.proto" GrpcServices="Client">
+      <Link>Protos\projection.proto</Link>
     </Protobuf>
   </ItemGroup>
 </Project>
