--- a/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
+++ b/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
@@ -5,5 +5,15 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AdministrationConnectionString": "Server=localhost;Database=AdministrationDb;User Id=sa;Password=RS12345678;"
+  },
+  "EmailSettings": {
+    "Mail": "destin.schroeder4@ethereal.email",
+    "DisplayName": "Webstore App",
+    "Password": "m7y9PEZzayQj7nkYCZ",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
   }
 }
