--- a/MovieBooking/docker-compose.yml
+++ b/MovieBooking/docker-compose.yml
@@ -44,8 +44,12 @@ services:
     image: dpage/pgadmin4
 
   administrationdb:
-    image: mcr.microsoft.com/mssql/server:2017-latest
-    
+    platform: linux/amd64
+    image: mcr.microsoft.com/azure-sql-edge
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+
   discount.api:
     image: ${DOCKER_REGISTRY-}discountapi
     build:
@@ -63,7 +67,9 @@ services:
     build:
       context: .
       dockerfile: Services/ReservationsAdministration/Administration.API/Dockerfile
+
   identitydb:
+    platform: linux/amd64
     image: mysql
 
   identity:
