--- a/MovieBooking/Services/Reservations/Reservations.API/appsettings.Development.json
+++ b/MovieBooking/Services/Reservations/Reservations.API/appsettings.Development.json
@@ -11,6 +11,9 @@
   },
   "GrpcSettings": {
     "DiscountUrl": "http://localhost:5003",
-    "ProjectionUrl":  "http://localhost:5006"
+    "ProjectionUrl": "http://localhost:5006"
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   }
 }
