--- a/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
+++ b/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
@@ -15,5 +15,8 @@
     "Password": "m7y9PEZzayQj7nkYCZ",
     "Host": "smtp.ethereal.email",
     "Port": 587
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
   }
 }
