Added rabbitmq in docker-compose.override in reservations.api and administration.api

--- a/MovieBooking/docker-compose.override.yml
+++ b/MovieBooking/docker-compose.override.yml
@@ -65,8 +65,10 @@ services:
       - "CacheSettings:ConnectionString=reservationsdb:6379"
       - "GrpcSettings:DiscountUrl=http://discount.grpc"
       - "GrpcSettings:ProjectionUrl=http://projections.grpc"
+      - "EventBusSettings:HostAdress=amqp://guest:guest@rabbitmq:5672"
     depends_on:
       - reservationsdb
+      - rabbitmq
       - discount.grpc
       - projections.grpc
     ports:
@@ -138,8 +140,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "ConnectionStrings:AdministrationConnectionString=Server=administrationdb;Database=AdministrationDb;User Id=sa;Password=RS12345678;"
+      - "EventBusSettings:HostAdress=amqp://guest:guest@rabbitmq:5672"
     depends_on: 
       - administrationdb
+      - rabbitmq
     ports:
       - "8007:80"
 
