fixed bugs and namespaces

--- a/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
+++ b/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "AdministrationConnectionString": "Server=localhost;Database=AdministrationDb;User Id=sa;Password=RS12345678;"
+    "ConnectionString": "Server=localhost;Database=AdministrationDb;User Id=sa;Password=RS12345678;"
   },
   "EmailSettings": {
     "Mail": "destin.schroeder4@ethereal.email",
