--- a/MovieBooking/Services/Security/Identity/Identity.csproj
+++ b/MovieBooking/Services/Security/Identity/Identity.csproj
@@ -20,7 +20,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.4" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\ReservationsAdministration\Administration.API\Administration.API.csproj" />
   </ItemGroup>
 
 </Project>
