fixed image for mssql

--- a/MovieBooking/docker-compose.yml
+++ b/MovieBooking/docker-compose.yml
@@ -44,8 +44,7 @@ services:
     image: dpage/pgadmin4
 
   administrationdb:
-    platform: linux/amd64
-    image: mcr.microsoft.com/azure-sql-edge
+    image: mcr.microsoft.com/mssql/server:2017-latest
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
