--- a/MovieBooking/MovieBookingSPA/package.json
+++ b/MovieBooking/MovieBookingSPA/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.1.2",
     "@angular/router": "^14.1.2",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
