--- a/MovieBooking/MovieBookingSPA/angular.json
+++ b/MovieBooking/MovieBookingSPA/angular.json
@@ -53,10 +53,12 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+            "styles": [  
+              "src/styles.css",  
+              "./node_modules/font-awesome/css/font-awesome.min.css"  
+            ],  
+            "scripts": []  
+  
           },
           "configurations": {
             "production": {
