--- a/MovieBooking/Services/Projection/Projections.API/Projections.API.csproj
+++ b/MovieBooking/Services/Projection/Projections.API/Projections.API.csproj
@@ -13,10 +13,12 @@
     <None Remove="Swashbuckle.AspNetCore" />
     <None Remove="Controllers\" />
     <None Remove="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
+    <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.16" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
