--- a/MovieBooking/Services/Reservations/Reservations.API/appsettings.Development.json
+++ b/MovieBooking/Services/Reservations/Reservations.API/appsettings.Development.json
@@ -15,5 +15,10 @@
   },
   "EventBusSettings": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+  "JwtSettings": {
+    "validIssuer": "MovieBooking Identity",
+    "validAudience": "MovieBooking",
+    "secretKey": "MyVerySecretMessage"
   }
 }
