--- a/MovieBooking/Services/TheaterHall/TheaterHalls.API/appsettings.Development.json
+++ b/MovieBooking/Services/TheaterHall/TheaterHalls.API/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017"
+  },
+  "JwtSettings": {
+    "validIssuer": "MovieBooking Identity",
+    "validAudience": "MovieBooking",
+    "secretKey": "MyVerySecretMessage"
   }
 }
