mail settings fixed

--- a/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
+++ b/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.Development.json
@@ -10,9 +10,9 @@
     "AdministrationConnectionString": "Server=localhost;Database=AdministrationDb;User Id=sa;Password=RSf1234_.5678;"
   },
   "EmailSettings": {
-    "Mail": "destin.schroeder4@ethereal.email",
+    "Mail": "matilda.harvey@ethereal.email",
     "DisplayName": "Webstore App",
-    "Password": "m7y9PEZzayQj7nkYCZ",
+    "Password": "nBB27jTnhPuQHzJqDw",
     "Host": "smtp.ethereal.email",
     "Port": 587
   },
