--- a/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.json
+++ b/MovieBooking/Services/ReservationsAdministration/Administration.API/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailSettings": {
+    "Mail": "matilda.harvey@ethereal.email",
+    "DisplayName": "Webstore App",
+    "Password": "nBB27jTnhPuQHzJqDw",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
+  },
   "AllowedHosts": "*"
 }
