--- a/MovieBooking/Services/Discount/Discount.API/appsettings.Development.json
+++ b/MovieBooking/Services/Discount/Discount.API/appsettings.Development.json
@@ -9,5 +9,10 @@
   },
   "DatabaseSettings": {
     "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+  },
+  "JwtSettings": {
+    "validIssuer": "MovieBooking Identity",
+    "validAudience": "MovieBooking",
+    "secretKey": "MyVerySecretMessage"
   }
 }
