--- a/MovieBooking/Services/Security/Identity/appsettings.Development.json
+++ b/MovieBooking/Services/Security/Identity/appsettings.Development.json
@@ -9,8 +9,7 @@
   "ConnectionStrings": {
     "IdentityConnectionString": "server=localhost;user=user;password=1234;database=IdentityDb"
   },
-  "Jwt
-    ": {
+  "JwtSettings": {
     "validIssuer": "MovieBooking Identity",
     "validAudience": "MovieBooking",
     "secretKey": "MyVerySecretMessage",
