docker-compose changed

--- a/MovieBooking/docker-compose.override.yml
+++ b/MovieBooking/docker-compose.override.yml
@@ -101,7 +101,7 @@ services:
     container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=${DISCOUNT_USER};Password=${DISCOUNT_PASSWORD};"
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};"
     depends_on:
       - discountdb
     ports:
@@ -111,7 +111,7 @@ services:
     container_name: discount.grpc
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=${DISCOUNT_USER};Password=${DISCOUNT_PASSWORD};"
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};"
     depends_on:
       - discountdb
     ports:
@@ -120,7 +120,7 @@ services:
   administrationdb:
     container_name: administrationdb
     environment:
-      - MSSQL_SA_PASSWORD=${ADMINISTRATION_PASSWORD}
+      - MSSQL_SA_PASSWORD=${MSSQL_PASSWORD}
       - ACCEPT_EULA=1
     restart: always
     ports:
@@ -139,7 +139,7 @@ services:
     container_name: administration.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings:AdministrationConnectionString=Server=administrationdb;Database=AdministrationDb;User Id=${ADMINISTRATION_USER};Password=${ADMINISTRATION_PASSWORD};"
+      - "ConnectionStrings:AdministrationConnectionString=Server=administrationdb;Database=AdministrationDb;User Id=${MSSQL_USER};Password=${MSSQL_PASSWORD};"
       - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
     depends_on: 
       - administrationdb
